parse/generated/ShapeExpressionParser.py
# Generated from C:/Users/giglerf/Documents/dev/ShapEx/parse/grammar\ShapeExpression.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ShapeExpressionParser ( Parser ):

    grammarFileName = "ShapeExpression.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "';'", "'*'", "'.'", "'join'", 
                     "'('", "')'", "'const'", "'line'", "'exp'", "'sine'", 
                     "'sinc'", "'param'", "'duration'", "'_constraint'",
                     "'e'", "'**'", "'-'", "'+'", "'['", "']'", "'<='", 
                     "'>='", "'<'", "'>'", "'=='", "'!='", "','", "'in'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "CONCAT", "UNION", "LEFTPAREN", "RIGHTPAREN", "CONSTANT", 
                      "LINE", "EXPONENTIAL", "SINE", "SINC", "PARAM", "DURATION", 
                      "CONSTRAINT", "EULER", "EXP", "MINUS", "PLUS", "LSQBRACKET", 
                      "RSQBRACKET", "LEQ", "GEQ", "LESS", "GREATER", "EQ", 
                      "NEQ", "COMMA", "IN", "IntegerLiteral", "RealLiteral", 
                      "Identifier", "LINE_TERMINATOR", "WHITESPACE", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_shape_expression = 0
    RULE_constraints = 1
    RULE_param_declaration = 2
    RULE_duration_declaration = 3
    RULE_constraint_declaration = 4
    RULE_constraint = 5
    RULE_expression = 6
    RULE_regular_expression = 7
    RULE_atomic = 8
    RULE_atomic_constant = 9
    RULE_atomic_line = 10
    RULE_atomic_exponential = 11
    RULE_atomic_sine = 12
    RULE_atomic_sinc = 13
    RULE_interval = 14
    RULE_discrete_interval = 15
    RULE_literal = 16

    ruleNames =  [ "shape_expression", "constraints", "param_declaration", 
                   "duration_declaration", "constraint_declaration", "constraint", 
                   "expression", "regular_expression", "atomic", "atomic_constant", 
                   "atomic_line", "atomic_exponential", "atomic_sine", "atomic_sinc", 
                   "interval", "discrete_interval", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    CONCAT=4
    UNION=5
    LEFTPAREN=6
    RIGHTPAREN=7
    CONSTANT=8
    LINE=9
    EXPONENTIAL=10
    SINE=11
    SINC=12
    PARAM=13
    DURATION=14
    CONSTRAINT=15
    EULER=16
    EXP=17
    MINUS=18
    PLUS=19
    LSQBRACKET=20
    RSQBRACKET=21
    LEQ=22
    GEQ=23
    LESS=24
    GREATER=25
    EQ=26
    NEQ=27
    COMMA=28
    IN=29
    IntegerLiteral=30
    RealLiteral=31
    Identifier=32
    LINE_TERMINATOR=33
    WHITESPACE=34
    COMMENT=35
    LINE_COMMENT=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Shape_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regular_expression(self):
            return self.getTypedRuleContext(ShapeExpressionParser.Regular_expressionContext,0)


        def constraints(self):
            return self.getTypedRuleContext(ShapeExpressionParser.ConstraintsContext,0)


        def getRuleIndex(self):
            return ShapeExpressionParser.RULE_shape_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShape_expression" ):
                return visitor.visitShape_expression(self)
            else:
                return visitor.visitChildren(self)




    def shape_expression(self):

        localctx = ShapeExpressionParser.Shape_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_shape_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.regular_expression(0)
            self.state = 35
            self.match(ShapeExpressionParser.T__0)
            self.state = 36
            self.constraints()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.Param_declarationContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.Param_declarationContext,i)


        def duration_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.Duration_declarationContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.Duration_declarationContext,i)


        def constraint_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.Constraint_declarationContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.Constraint_declarationContext,i)


        def getRuleIndex(self):
            return ShapeExpressionParser.RULE_constraints

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraints" ):
                return visitor.visitConstraints(self)
            else:
                return visitor.visitChildren(self)




    def constraints(self):

        localctx = ShapeExpressionParser.ConstraintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_constraints)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ShapeExpressionParser.PARAM]:
                    self.state = 38
                    self.param_declaration()
                    pass
                elif token in [ShapeExpressionParser.DURATION]:
                    self.state = 39
                    self.duration_declaration()
                    pass
                elif token in [ShapeExpressionParser.LEFTPAREN, ShapeExpressionParser.EULER, ShapeExpressionParser.MINUS, ShapeExpressionParser.IntegerLiteral, ShapeExpressionParser.RealLiteral, ShapeExpressionParser.Identifier]:
                    self.state = 40
                    self.constraint_declaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ShapeExpressionParser.LEFTPAREN) | (1 << ShapeExpressionParser.PARAM) | (1 << ShapeExpressionParser.DURATION) | (1 << ShapeExpressionParser.EULER) | (1 << ShapeExpressionParser.MINUS) | (1 << ShapeExpressionParser.IntegerLiteral) | (1 << ShapeExpressionParser.RealLiteral) | (1 << ShapeExpressionParser.Identifier))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAM(self):
            return self.getToken(ShapeExpressionParser.PARAM, 0)

        def Identifier(self):
            return self.getToken(ShapeExpressionParser.Identifier, 0)

        def interval(self):
            return self.getTypedRuleContext(ShapeExpressionParser.IntervalContext,0)


        def getRuleIndex(self):
            return ShapeExpressionParser.RULE_param_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_declaration" ):
                return visitor.visitParam_declaration(self)
            else:
                return visitor.visitChildren(self)




    def param_declaration(self):

        localctx = ShapeExpressionParser.Param_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_param_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(ShapeExpressionParser.PARAM)
            self.state = 46
            self.match(ShapeExpressionParser.Identifier)
            self.state = 47
            self.interval()
            self.state = 48
            self.match(ShapeExpressionParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Duration_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DURATION(self):
            return self.getToken(ShapeExpressionParser.DURATION, 0)

        def Identifier(self):
            return self.getToken(ShapeExpressionParser.Identifier, 0)

        def discrete_interval(self):
            return self.getTypedRuleContext(ShapeExpressionParser.Discrete_intervalContext,0)


        def getRuleIndex(self):
            return ShapeExpressionParser.RULE_duration_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDuration_declaration" ):
                return visitor.visitDuration_declaration(self)
            else:
                return visitor.visitChildren(self)




    def duration_declaration(self):

        localctx = ShapeExpressionParser.Duration_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_duration_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(ShapeExpressionParser.DURATION)
            self.state = 51
            self.match(ShapeExpressionParser.Identifier)
            self.state = 52
            self.discrete_interval()
            self.state = 53
            self.match(ShapeExpressionParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constraint_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constraint(self):
            return self.getTypedRuleContext(ShapeExpressionParser.ConstraintContext,0)


        def getRuleIndex(self):
            return ShapeExpressionParser.RULE_constraint_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint_declaration" ):
                return visitor.visitConstraint_declaration(self)
            else:
                return visitor.visitChildren(self)




    def constraint_declaration(self):

        localctx = ShapeExpressionParser.Constraint_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constraint_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.constraint()
            self.state = 56
            self.match(ShapeExpressionParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ShapeExpressionParser.RULE_constraint

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LRA_NeqContext(ConstraintContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ConstraintContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,i)

        def NEQ(self):
            return self.getToken(ShapeExpressionParser.NEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLRA_Neq" ):
                return visitor.visitLRA_Neq(self)
            else:
                return visitor.visitChildren(self)


    class LRA_EqContext(ConstraintContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ConstraintContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,i)

        def EQ(self):
            return self.getToken(ShapeExpressionParser.EQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLRA_Eq" ):
                return visitor.visitLRA_Eq(self)
            else:
                return visitor.visitChildren(self)


    class LRA_LEQContext(ConstraintContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ConstraintContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,i)

        def LEQ(self):
            return self.getToken(ShapeExpressionParser.LEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLRA_LEQ" ):
                return visitor.visitLRA_LEQ(self)
            else:
                return visitor.visitChildren(self)


    class LRA_GEQContext(ConstraintContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ConstraintContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,i)

        def GEQ(self):
            return self.getToken(ShapeExpressionParser.GEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLRA_GEQ" ):
                return visitor.visitLRA_GEQ(self)
            else:
                return visitor.visitChildren(self)


    class LRA_InContext(ConstraintContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ConstraintContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,i)

        def IN(self):
            return self.getToken(ShapeExpressionParser.IN, 0)
        def LEFTPAREN(self):
            return self.getToken(ShapeExpressionParser.LEFTPAREN, 0)
        def COMMA(self):
            return self.getToken(ShapeExpressionParser.COMMA, 0)
        def RIGHTPAREN(self):
            return self.getToken(ShapeExpressionParser.RIGHTPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLRA_In" ):
                return visitor.visitLRA_In(self)
            else:
                return visitor.visitChildren(self)


    class LRA_GreaterContext(ConstraintContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ConstraintContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,i)

        def GREATER(self):
            return self.getToken(ShapeExpressionParser.GREATER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLRA_Greater" ):
                return visitor.visitLRA_Greater(self)
            else:
                return visitor.visitChildren(self)


    class LRA_LessContext(ConstraintContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ConstraintContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,i)

        def LESS(self):
            return self.getToken(ShapeExpressionParser.LESS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLRA_Less" ):
                return visitor.visitLRA_Less(self)
            else:
                return visitor.visitChildren(self)



    def constraint(self):

        localctx = ShapeExpressionParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constraint)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = ShapeExpressionParser.LRA_LEQContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.expression(0)
                self.state = 59
                self.match(ShapeExpressionParser.LEQ)
                self.state = 60
                self.expression(0)
                pass

            elif la_ == 2:
                localctx = ShapeExpressionParser.LRA_GEQContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.expression(0)
                self.state = 63
                self.match(ShapeExpressionParser.GEQ)
                self.state = 64
                self.expression(0)
                pass

            elif la_ == 3:
                localctx = ShapeExpressionParser.LRA_LessContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.expression(0)
                self.state = 67
                self.match(ShapeExpressionParser.LESS)
                self.state = 68
                self.expression(0)
                pass

            elif la_ == 4:
                localctx = ShapeExpressionParser.LRA_GreaterContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.expression(0)
                self.state = 71
                self.match(ShapeExpressionParser.GREATER)
                self.state = 72
                self.expression(0)
                pass

            elif la_ == 5:
                localctx = ShapeExpressionParser.LRA_EqContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.expression(0)
                self.state = 75
                self.match(ShapeExpressionParser.EQ)
                self.state = 76
                self.expression(0)
                pass

            elif la_ == 6:
                localctx = ShapeExpressionParser.LRA_NeqContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 78
                self.expression(0)
                self.state = 79
                self.match(ShapeExpressionParser.NEQ)
                self.state = 80
                self.expression(0)
                pass

            elif la_ == 7:
                localctx = ShapeExpressionParser.LRA_InContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 82
                self.expression(0)
                self.state = 83
                self.match(ShapeExpressionParser.IN)
                self.state = 84
                self.match(ShapeExpressionParser.LEFTPAREN)
                self.state = 85
                self.expression(0)
                self.state = 86
                self.match(ShapeExpressionParser.COMMA)
                self.state = 87
                self.expression(0)
                self.state = 88
                self.match(ShapeExpressionParser.RIGHTPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ShapeExpressionParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExpressionParanthesisContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEFTPAREN(self):
            return self.getToken(ShapeExpressionParser.LEFTPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,0)

        def RIGHTPAREN(self):
            return self.getToken(ShapeExpressionParser.RIGHTPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionParanthesis" ):
                return visitor.visitExpressionParanthesis(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionMultiplicationContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionMultiplication" ):
                return visitor.visitExpressionMultiplication(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionSubtractionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,i)

        def MINUS(self):
            return self.getToken(ShapeExpressionParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionSubtraction" ):
                return visitor.visitExpressionSubtraction(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionAdditionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShapeExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,i)

        def PLUS(self):
            return self.getToken(ShapeExpressionParser.PLUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionAddition" ):
                return visitor.visitExpressionAddition(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionVariableContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(ShapeExpressionParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionVariable" ):
                return visitor.visitExpressionVariable(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionConstantContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(ShapeExpressionParser.LiteralContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionConstant" ):
                return visitor.visitExpressionConstant(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionExponentialContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShapeExpressionParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EULER(self):
            return self.getToken(ShapeExpressionParser.EULER, 0)
        def EXP(self):
            return self.getToken(ShapeExpressionParser.EXP, 0)
        def expression(self):
            return self.getTypedRuleContext(ShapeExpressionParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionExponential" ):
                return visitor.visitExpressionExponential(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ShapeExpressionParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ShapeExpressionParser.Identifier]:
                localctx = ShapeExpressionParser.ExpressionVariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 93
                self.match(ShapeExpressionParser.Identifier)
                pass
            elif token in [ShapeExpressionParser.MINUS, ShapeExpressionParser.IntegerLiteral, ShapeExpressionParser.RealLiteral]:
                localctx = ShapeExpressionParser.ExpressionConstantContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 94
                self.literal()
                pass
            elif token in [ShapeExpressionParser.LEFTPAREN]:
                localctx = ShapeExpressionParser.ExpressionParanthesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 95
                self.match(ShapeExpressionParser.LEFTPAREN)
                self.state = 96
                self.expression(0)
                self.state = 97
                self.match(ShapeExpressionParser.RIGHTPAREN)
                pass
            elif token in [ShapeExpressionParser.EULER]:
                localctx = ShapeExpressionParser.ExpressionExponentialContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 99
                self.match(ShapeExpressionParser.EULER)
                self.state = 100
                self.match(ShapeExpressionParser.EXP)
                self.state = 101
                self.expression(4)
                pass
            else:
                raise NoViableAltException(self)
